# mysql-haskell

./: .gitignore  ChangeLog.md  mysql-haskell.cabal  stack.yaml
Database/MySQL/: Base.hs  BinLog.hs  Connection.hs  Query.hs  TLS.hs
Database/MySQL/BinLogProtocol/: BinLogEvent.hs  BinLogMeta.hs  BinLogValue.hs
Database/MySQL/Protocol/: Auth.hs  ColumnDef.hs  Command.hs  Escape.hs  MySQLValue.hs  Packet.hs
benchmark/insert/: MySQLHaskell.hs  MySQLHaskellInsertMany.hs  MySQLHaskellPrepared.hs
benchmark/select/: MySQLFFI.hs  MySQLHaskell.hs  MySQLHaskellOpenSSL.hs  MySQLHaskellPrepared.hs  MySQLHaskellTLS.hs
test/: BinLog.hs  BinLogNew.hs  BinaryRow.hs  BinaryRowNew.hs  ExecuteMany.hs  Main.hs  TextRow.hs  TextRowNew.hs
