cabal-version:      2.2
name:               mysql-haskell
version:            0.9.1.0
synopsis:           Pure Haskell MySQL driver.
description:        Pure Haskell MySQL driver.
homepage:           https://github.com/winterland1989/mysql-haskell
bug-reports:        https://github.com/winterland1989/mysql-haskell/issues
license:            MIT
license-file:       LICENSE
author:             winterland1989
maintainer:         koz.ross@retro-freedom.nz
copyright:          (C) 2016 Winterland, (C) 2020 Juspay Technologies Pvt Ltd
category:           Database
build-type:         Simple
tested-with:        GHC ==8.8.1
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/kozross/mysql-haskell.git

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror

  build-depends:    base >=4.13 && <5
  default-language: Haskell2010

library
  import:          common-lang
  exposed-modules:
    Database.MySQL.Base
    Database.MySQL.BinLog
    Database.MySQL.BinLogProtocol.BinLogEvent
    Database.MySQL.BinLogProtocol.BinLogMeta
    Database.MySQL.BinLogProtocol.BinLogValue
    Database.MySQL.Connection
    Database.MySQL.Protocol.Auth
    Database.MySQL.Protocol.ColumnDef
    Database.MySQL.Protocol.Command
    Database.MySQL.Protocol.Escape
    Database.MySQL.Protocol.MySQLValue
    Database.MySQL.Protocol.Packet
    Database.MySQL.TLS

  other-modules:   Database.MySQL.Query
  build-depends:
    , binary             ^>=0.8.7.0
    , binary-parsers     ^>=0.2.4.0
    , blaze-textual      ^>=0.2.1.0
    , bytestring         ^>=0.10.10.0
    , bytestring-lexing  ^>=0.5.0.2
    , cryptonite         ^>=0.26
    , io-streams         ^>=1.5.1.0
    , memory             ^>=0.15.0
    , monad-loops        ^>=0.4.3
    , network            ^>=3.1.1.1
    , scientific         ^>=0.3.6.2
    , tcp-streams        ^>=1.0.1.1
    , text               ^>=1.2.3.2
    , time               ^>=1.9.3
    , tls                ^>=1.5.4
    , vector             ^>=0.12.1.2
    , word24             ^>=2.0.1

test-suite test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    BinaryRow
    BinaryRowNew
    BinLog
    BinLogNew
    ExecuteMany
    TextRow
    TextRowNew

  hs-source-dirs: test
  build-depends:
    , base
    , bytestring
    , io-streams
    , mysql-haskell
    , tasty          ^>=1.2.3
    , tasty-hunit    ^>=0.10.0.2
    , text
    , time
    , vector

  ghc-options:    -threaded -O2 -with-rtsopts=-N
